--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,16 @@
                 <artifactId>java-jwt</artifactId>
                 <version>3.18.3</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>fluent-hc</artifactId>
+                <version>4.5.13</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>1.2.79</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
