--- a/pom.xml
+++ b/pom.xml
@@ -77,13 +77,14 @@
                 <scope>test</scope>
             </dependency>
 
-            <!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
+            <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test -->
             <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-test</artifactId>
-                <version>5.3.16</version>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-test</artifactId>
+                <version>2.6.3</version>
                 <scope>test</scope>
             </dependency>
+
 
             <!-- https://mvnrepository.com/artifact/org.springframework/spring-tx -->
             <dependency>
