--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,13 @@
                 <artifactId>dubbo</artifactId>
                 <version>2.6.12</version>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>javax.servlet-api</artifactId>
+                <version>4.0.1</version>
+                <scope>provided</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
