--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,25 @@
                 <version>4.0.1</version>
                 <scope>provided</scope>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/org.apache.struts/struts2-core -->
+            <dependency>
+                <groupId>org.apache.struts</groupId>
+                <artifactId>struts2-core</artifactId>
+                <version>2.5.30</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/org.apache.struts/struts2-spring-plugin -->
+            <dependency>
+                <groupId>org.apache.struts</groupId>
+                <artifactId>struts2-spring-plugin</artifactId>
+                <version>2.5.30</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/org.apache.struts/struts2-json-plugin -->
+            <dependency>
+                <groupId>org.apache.struts</groupId>
+                <artifactId>struts2-json-plugin</artifactId>
+                <version>2.5.30</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
